--- a/templates/intern.html
+++ b/templates/intern.html
@@ -1,13 +1,15 @@
-<div class="card employee-card">
-    <div class="card-header">
-        <h2 class="card-title">{{ name }}</h2>
-        <h3 class="card-title"><i class="fas fa-user-graduate mr-2"></i>{{ role }}</h3>
-    </div>
-    <div class="card-body">
-        <ul class="list-group">
-            <li class="list-group-item">ID: {{ id }}</li>
-            <li class="list-group-item">Email: <a href="mailto:{{ email }}">{{ email }}</a></li>
-            <li class="list-group-item">School: {{ school }}</li>
-        </ul>
+<div class="col-4">
+    <div class="card shadow-sm mb-3">
+        <div class="card-header bg-primary text-light">
+            <h5><%= user.name %></h5>
+            <p><i class="fa fa-book" aria-hidden="true"></i>Intern</p>
+        </div>
+        <div class="card-body" style="background-color: #eeeeee;">
+            <ul class="list-group list-group-flush" style="border: 1px solid #e2e2e2">
+                <li class="list-group-item">ID: <%= user.id %></li>
+                <li class="list-group-item">Email: <%= user.email %></li>
+                <li class="list-group-item">School: <%= user.school %></li>
+            </ul>
+        </div>
     </div>
 </div>
